--- a/mini_project.ipynb
+++ b/mini_project.ipynb
@@ -1454,7 +1454,7 @@
         "id": "wru6NJqR8Idn"
       },
       "source": [
-        "Note: From the graph, we can see that we **do not have an even number of people for each type of work**. In addition, there are labels which are not a type of work by definition, for example, 'children'. "
+        "Note: From the graph, we can see that we **do not have an even number of people for each type of work**."
       ]
     },
     {
@@ -2268,7 +2268,7 @@
         "<br><br>\n",
         "Looking at the box plot, we notice that the **outliers noted previously are non-stroke patients**. This shows that it is **out of the general pattern for people with high average glucose levels to not have stroke**.\n",
         "<br><br>\n",
-        "Looking at the violin plot and histogram, we notice two peaks, one at **approximately 90** and the other at **approximately 210**. This shows how it **may not be uncommon for people with low (or if not healthy) average glucose levels to have stroke as well**.\n",
+        "Looking at the violin plot and histogram, we notice two peaks, one at **approximately 90** and the other at **approximately 210**. This shows how it **may not be uncommon for people with low (or healthy) average glucose levels to have stroke as well**.\n",
         "<br><br>\n",
         "Although based on the **median, Q3 and maximum values** for stroke and non-stroke patients, we are able to deduce that there is **likely correlation between the average glucose level and stroke** (which is in line with general medical trends (WebMD, 2021)), it is interesting to note that **(i) it is not uncommon for people with healthy average blood glucose levels to have stroke** and **(ii) there are more than a handful that have high average blood glucose levels but do not have stroke**."
       ]
@@ -4786,7 +4786,7 @@
         "### Conclusion\n",
         "KNN is **NOT an ideal classifier** to use in this case.\n",
         "<br><br>\n",
-        "There is **likely some correlation** between stroke and unconventional features because the **classification accuracy and F1-score are higher when unconventional features are included** (as compared to when only conventional features are used)."
+        "There is **likely some correlation** between stroke and unconventional features because the **classification accuracy is higher when unconventional features are included** (as compared to when only conventional features are used)."
       ]
     },
     {
@@ -5065,7 +5065,7 @@
       "source": [
         "### Observations\n",
         "\n",
-        "From the above, we can observe that XGBoost is a good ML algorithm in predicting stroke as it yield a 90%+ accuracy rate. However, with a F1-Score of 0.234, we can see that it have a weak performance in the False Postive and False Negative values which are critical in the medical field. \n",
+        "From the above, we can observe that XGBoost is a good ML algorithm in predicting stroke as it yield a 90%+ accuracy rate. However, with a F1-Score of 0.2++, we can see that it have a weak performance in the False Postive and False Negative values which are critical in the medical field. \n",
         "\n",
         "From the feature importance function that is provided in the XGBoost library, we observe that the top 3 important features are 'bmi', 'age' and 'avg_glucose_level', and this is within our expectations. Looking at the unconventional features, we observe that 'work_type' is the leading feature, followed by 'reside_urban' (formerly 'Residence_type') and 'ever_married'. These findings tally with some of our previous findings."
       ]
@@ -6106,7 +6106,7 @@
         "\n",
         "2. Order of unconventional features from most important to least important: **work_type > reside_urban > ever_married** \n",
         "\n",
-        "    This is evident from the accuracy obtained. The difference when the 5 different options of 'work_type' are added to the conventional data is much larger as compared to when either 'ever_married' or 'reside_urban' is added. This difference shows how the feature added affects the accuracy of the conventional data. As such, the **larger the difference in accuracy** between the result obtained when one unconventional factor is added and the accuracy with only conventional data, the **larger the influence this unconventional feature has on the prediction of stroke**.\n",
+        "    This is evident from the accuracy obtained. The difference when the 5 different options of 'work_type' are added to the conventional data is much larger as compared to when either 'ever_married' or 'reside_urban' is added. The **higher the accuracy** obtained when an unconventional feature is added, the **larger the influence** this unconventional feature has on the prediction of stroke.\n",
         "\n",
         "3. From the result obtained from the Permutation Feature Importance, Naive Bayes generally shows a **higher dependency on 'work_type'** as compared to 'reside_urban' and 'ever_married'. This is seen from the plot with 'work_type_Govt_job' showing the largest feature importance, followed by 'work_type_Never_worked' and 'work_type_Self_employed'.\n",
         "\n",
@@ -6130,7 +6130,7 @@
       },
       "source": [
         "### Other Notes\n",
-        "Despite the fact that input features have the potential to be dependent on one another, it can be seen that the accuracy of prediction is not compromised even with the assumption f independency.\n",
+        "Despite the fact that input features have the potential to be dependent on one another, it can be seen that the accuracy of prediction is not compromised even with the assumption of independency.\n",
         "\n",
         "Naive Bayes is good at achieving low FPR and FNR, which is important in the medical perspective as we do not want to wrongly classify the (potential) stroke status of people."
       ]
