--- a/mini_project.ipynb
+++ b/mini_project.ipynb
@@ -6108,7 +6108,7 @@
         "\n",
         "    This is evident from the accuracy obtained. The difference when the 5 different options of 'work_type' are added to the conventional data is much larger as compared to when either 'ever_married' or 'reside_urban' is added. The **higher the accuracy** obtained when an unconventional feature is added, the **larger the influence** this unconventional feature has on the prediction of stroke.\n",
         "\n",
-        "3. From the result obtained from the Permutation Feature Importance, Naive Bayes generally shows a **higher dependency on 'work_type'** as compared to 'reside_urban' and 'ever_married'. This is seen from the plot with 'work_type_Govt_job' showing the largest feature importance, followed by 'work_type_Never_worked' and 'work_type_Self_employed'.\n",
+        "3. From the result obtained from the Permutation Feature Importance, Naive Bayes generally shows a **higher dependency on 'work_type'** as compared to 'reside_urban' and 'ever_married'. This is seen from the plot with 'work_type_Govt_job' showing the largest feature importance, followed by 'work_type_Self-employed' and 'work_type_Private'.\n",
         "\n",
         "    **'ever_married' is ignored as they give a negative value** for Permutation Feature Importance, which means the prediction is negatively affected by these features.\n"
       ]
